@@ -40,12 +40,21 @@ __all__ = []
 class OpProgress(base.OpProgress):
     """Abstract class to implement reporting on cache opening."""
 
+    def __init__(self):
+        warnings.warn("apt.progress.OpProgress is deprecated.",
+                      DeprecationWarning, stacklevel=2)
+
     subOp = AttributeDeprecatedBy('subop')
     Op = AttributeDeprecatedBy('op')
 
 
 class OpTextProgress(OpProgress, text.OpProgress):
     """A simple text based cache open reporting class."""
+
+    def __init__(self):
+        text.OpProgress.__init__(self)
+        warnings.warn("apt.progress.OpTextProgress is deprecated.",
+                      DeprecationWarning, stacklevel=2)
 
 
 class FetchProgress(object):
@@ -65,7 +74,8 @@ class FetchProgress(object):
         self.totalBytes = 0
         self.totalItems = 0
         self.currentCPS = 0
-        warnings.warn("FetchProgress() is deprecated.", DeprecationWarning)
+        warnings.warn("apt.progress.FetchProgress is deprecated.",
+                      DeprecationWarning, stacklevel=2)
 
     def start(self):
         """Called when the fetching starts."""
@@ -160,27 +170,54 @@ class TextFetchProgress(FetchProgress):
         return raw_input() not in ('c', 'C')
 
 
-class CdromProgress(base.CdromProgress):
-    """Report the cdrom add progress.
+class CdromProgress(object):
+    """Report the cdrom add progress."""
 
-    This class has been replaced by apt_pkg.CdromProgress.
-    """
-    _basetype = base.CdromProgress
-    askCdromName = function_deprecated_by(_basetype.ask_cdrom_name)
-    changeCdrom = function_deprecated_by(_basetype.change_cdrom)
-    del _basetype
+    def __init__(self):
+        warnings.warn("apt.progress.CdromProgress is deprecated.",
+                      DeprecationWarning, stacklevel=2)
+
+    def askCdromName(self):
+        """Ask for a cdrom name"""
+
+    def changeCdrom(self):
+        """Change cdrom"""
+
+    def update(self, text, current):
+        """Update."""
 
 
 class DumbInstallProgress(base.InstallProgress):
-    """Report the install progress.
+    """Report the install progress."""
 
-    Subclass this class to implement install progress reporting.
-    """
+    def __init__(self):
+        warnings.warn("apt.progress.*InstallProgress are deprecated.",
+                      DeprecationWarning, stacklevel=2)
 
-    startUpdate = function_deprecated_by(base.InstallProgress.start_update)
-    finishUpdate = function_deprecated_by(base.InstallProgress.finish_update)
-    updateInterface = function_deprecated_by(
-                base.InstallProgress.update_interface)
+    def updateInterface(self):
+        # *_stream were not available in the old progress reporting classes,
+        # create the attributes if they do not exist yet; as they are used
+        # in base.InstallProgress.update_interface().
+        if hasattr(self, "writefd") and not hasattr(self, "write_stream"):
+            self.write_stream = os.fdopen(self.writefd, "w")
+        if hasattr(self, "statusfd") and not hasattr(self, "status_stream"):
+            self.status_stream = os.fdopen(self.statusfd, "r")
+        base.InstallProgress.update_interface(self)
+
+    def update_interface(self):
+        self.updateInterface()
+
+    def startUpdate(self):
+        base.InstallProgress.start_update(self)
+
+    def start_update(self):
+        self.startUpdate()
+
+    def finishUpdate(self):
+        base.InstallProgress.finish_update(self)
+
+    def finish_update(self):
+        self.finishUpdate()
 
 
 class InstallProgress(DumbInstallProgress, base.InstallProgress):
@@ -191,16 +228,18 @@ class InstallProgress(DumbInstallProgress, base.InstallProgress):
     """
 
     selectTimeout = AttributeDeprecatedBy('select_timeout')
-    statusChange = function_deprecated_by(base.InstallProgress.status_change)
-    updateInterface = function_deprecated_by(
-        base.InstallProgress.update_interface)
-    waitChild = function_deprecated_by(base.InstallProgress.wait_child)
+
+    def statusChange(self, pkg, percent, status):
+        base.InstallProgress.status_change(self, pkg, percent, status)
 
     def status_change(self, pkg, percent, status):
-        """(Abstract) Called when the APT status changed."""
-        # compat with 0.7
-        if apt_pkg._COMPAT_0_7 and hasattr(self, "statusChange"):
-            self.statusChange(pkg, percent, status)
+        self.statusChange(pkg, percent, status)
+
+    def waitChild(self):
+        base.InstallProgress.wait_child(self)
+
+    def wait_child(self):
+        self.waitChild()
 
 
 class DpkgInstallProgress(InstallProgress):
@@ -214,4 +253,4 @@ class DpkgInstallProgress(InstallProgress):
         # Deprecated stuff
         self.debfile = debfile
         self.debname = os.path.basename(debfile).split("_")[0]
-        return base.InstallProgress(self, debfile)
+        return base.InstallProgress.run(self, debfile)
